--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet"/>
 
-    <link rel="stylesheet" href="./src/css/reset.css">
-    <link rel="stylesheet" href="./src/css/estilos.css">
+    <link rel="stylesheet" href="./src/css/reset.css"/>
+    <link rel="stylesheet" href="./src/css/estilos.css"/>
+    <link rel="stylesheet" href="./src/css/responsivo.css" />
 
 </head>
 
@@ -97,7 +98,7 @@
                     <div class="info-project">
                         <p>Project make using HTML, CSS and JavaScript</p>
                         <p>🔗 See on GitHub Pages</p>
-                    </div>>
+                    </div>
                 </a>
             </div>
 
@@ -123,7 +124,7 @@
                 </a>
             </div>
 
-            <div class="project active">
+            <div class="project">
                 <a href="https://github.com/leofigueiredo00/How-Sweet-is-this" target="_blank">
                     <img src="./src/images/SourWatermelonBalls.jpg" alt="How Seet is this" />
                     <h3>Project 5</h3>
@@ -166,8 +167,55 @@
                     </div>
                 </a>
             </div>
+
+            <div class="project">
+                <a href="#" target="_blank">
+                    <img src="https://via.placeholder.com/515X700" alt="Capa do projeto" />
+                    <h3>Project 9</h3>
+                    <div class="info-project">
+                        <p>Project make using HTML, CSS and JavaScript</p>
+                        <p>🔗 See on GitHub Pages</p>
+                    </div>
+                </a>
+            </div>
+
+            <div class="project">
+                <a href="#" target="_blank">
+                    <img src="https://via.placeholder.com/515X700" alt="Capa do projeto" />
+                    <h3>Project 10</h3>
+                    <div class="info-project">
+                        <p>Project make using HTML, CSS and JavaScript</p>
+                        <p>🔗 See on GitHub Pages</p>
+                    </div>
+                </a>
+            </div>
+
+            <div class="project">
+                <a href="#" target="_blank">
+                    <img src="https://via.placeholder.com/515X700" alt="Capa do projeto" />
+                    <h3>Project 11</h3>
+                    <div class="info-project">
+                        <p>Project make using HTML, CSS and JavaScript</p>
+                        <p>🔗 See on GitHub Pages</p>
+                    </div>
+                </a>
+            </div>
+
+            <div class="project">
+                <a href="#" target="_blank">
+                    <img src="https://via.placeholder.com/515X700" alt="Capa do projeto" />
+                    <h3>Project 12</h3>
+                    <div class="info-project">
+                        <p>Project make using HTML, CSS and JavaScript</p>
+                        <p>🔗 See on GitHub Pages</p>
+                    </div>
+                </a>
+            </div>
         </div>
         <button class="btn-show-projects">Show more</button>
     </section>
+
+    <script src="./src/js/index.js"></script>
+
 </body>
 </html>
