--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
             <div class="project">
                 <a href="https://github.com/leofigueiredo00/How-Sweet-is-this" target="_blank">
-                    <img src="./src/images/SourWatermelonBalls.jpg" alt="How Seet is this" />
+                    <img src="./src/images/SourWatermelonBalls.png" alt="How Seet is this" />
                     <h3>Project 5</h3>
                     <div class="info-project">
                         <p>Project make using HTML and CSS</p>
