--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
             </div>
 
             <div class="project">
-                <a href="#" target="_blank">
-                    <img src="https://via.placeholder.com/515X700" alt="Capa do projeto" />
+                <a href="https://github.com/leofigueiredo00/coffe-store" target="_blank">
+                    <img src="./src/images/coffee-beans-ground-paper-bags.png" alt="Coffee Shop" />
                     <h3>Project 6</h3>
                     <div class="info-project">
                         <p>Project make using HTML, CSS and JavaScript</p>
